# value_iteration

./: CMakeLists.txt  LICENSE  README.md  package.xml
action/: .Vi.action.swp  Vi.action
config/: conf.rviz
experimental_data_20220706/: RESULT_2x2  RESULT_4x4  RESULT_8x8  trial_2x2_6+2thread_1.txt  trial_2x2_6+2thread_10.txt  trial_2x2_6+2thread_2.txt  trial_2x2_6+2thread_3.txt  trial_2x2_6+2thread_4.txt  trial_2x2_6+2thread_5.txt  trial_2x2_6+2thread_6.txt  trial_2x2_6+2thread_7.txt  trial_2x2_6+2thread_8.txt  trial_2x2_6+2thread_9.txt  trial_4x4_6+2thread_1.txt  trial_4x4_6+2thread_10.txt  trial_4x4_6+2thread_2.txt  trial_4x4_6+2thread_3.txt  trial_4x4_6+2thread_4.txt  trial_4x4_6+2thread_5.txt  trial_4x4_6+2thread_6.txt  trial_4x4_6+2thread_7.txt  trial_4x4_6+2thread_8.txt  trial_4x4_6+2thread_9.txt  trial_8x8_6+2thread_1.txt  trial_8x8_6+2thread_10.txt  trial_8x8_6+2thread_2.txt  trial_8x8_6+2thread_3.txt  trial_8x8_6+2thread_4.txt  trial_8x8_6+2thread_5.txt  trial_8x8_6+2thread_6.txt  trial_8x8_6+2thread_7.txt  trial_8x8_6+2thread_8.txt  trial_8x8_6+2thread_9.txt
experimental_data_20220708/: 2x2.txt  4x4.txt  8x8.txt  MEMO
include/: Action.h  State.h  StateTransition.h  SweepWorkerStatus.h  ValueIterator.h  ViActionServer.h  ViServer.h
launch/: .navigation_house.launch.swp  .vi_turtle_online.launch.swp  amcl.launch  comp20210528.launch  emcl.launch  emcl_silent.launch  experiment20210528.launch  hoge.launch  navigation_house.launch  navigation_house_after_planning.launch  navigation_house_no_local.launch  navigation_house_one_thread.launch  pc.launch  (+10 more)
(+65 files in other folders)
